--- a/app/javascript/packs/server_rendering.js.erb
+++ b/app/javascript/packs/server_rendering.js.erb
@@ -1,3 +1,7 @@
+import I18n from "i18n-js";
+
+I18n.translations = <%= I18n::JS.translations.to_json %>;
+
 // By default, this pack is loaded for server-side rendering.
 // It must expose react_ujs as `ReactRailsUJS` and prepare a require context.
 var componentRequireContext = require.context("components", true);
