Apply i18n to react Form component
Ensure the form component is available for the same languages that
the Rails app is supported (at the moment: Portuguese, German and
English)

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,5 @@
 .container
-  = react_component 'Form'
+  = react_component 'Form', locale: params[:locale]
 
   .row
     .col-md-6.col-md-offset-3
